# 42

./: .gitignore  README.md  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_memmove.c  ft_memset.c  ft_strlen.c  mains.c  mains.txt
c_00/ex01/: ft_print_alphabet.c
c_00/ex02/: ft_print_reverse_alphabet.c
c_00/ex04/: ft_is_negative.c
c_00/ex05/: ft_print_comb.c
c_01/ex01/: ft_ultimate_ft.c
fly_in/: .gitignore  Makefile  dispatcher.py  drones.py  error_handling.py  hub.py  main.py  output.txt  output_logs.py  requirements.txt  test_output.py  variables.py  zone_network.py
ft_printf/: Makefile  README.md  ft_printf.c  ft_printf.h  ft_printf_helper1.c  main.c
get_next_line/: README.md  get_next_line.c  get_next_line.h  get_next_line_utils.c  ink.txt  test.c
libft/: Makefile  a.out  ft_*.c  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_memchr.c  ft_memcmp  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  ink.txt  libft.h  (+2 more)
push_swap/: Makefile  README.md  push_swap  push_swap.h  script.sh  test  test-push.sh  test.c
python-piscine/m_08/ex1/: loading.py  pyproject.toml  requirements.txt
random/: Notes about evaluation
tester-scrips/: python-tester.sh
(+292 files in other folders)
