[project]
name = "matrix_env"
version = "0.1.0"
authors = [
    {name = "ridias", email="ridias@student.42lisboa.com"}
]
requires-python = ">=3.10"
dependencies = ["matplotlib>=3.7", "numpy>=1.25", "pandas>=2.1"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]

[tool.poetry]
package-mode = false